# Final-Year-Project

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  FaceNormal.h  FaceNormalTest.cpp  Makefile  README.md  cmake_install.cmake
.github/workflows/: c-cpp.yml
Classes/Cluster/: AssignNeighbouringTrianglesOptimization  AssignNeighbouringTrianglesOptimization.cpp  Cluster.cpp  Cluster.hpp  ClusterTest  ClusterTest.cpp  clusteringTest  clusteringTest.cpp  generateTrianglesTest  generateTrianglesTest.cpp  main.cpp  ompoutput  omptest  outputCube.mtl  outputFile  testingAssignNeighboursFunction.cpp
Classes/Edge/: Edge.cpp  Edge.hpp  EdgeTesting  EdgeTesting.cpp
Classes/Material/: Material.cpp  Material.hpp  MaterialTest  MaterialTest.cpp
Classes/ReadWriter/: ReadWriter.cpp  ReadWriter.hpp  ReadWriterTest.cpp  outputCube.mtl
Classes/Triangle/: CalculateDistanceTest  CalculateDistanceTest.cpp  Triangle.cpp  Triangle.hpp  TriangleTest  TriangleTest.cpp
Classes/Vector3D/: Vector3D.cpp  Vector3D.hpp  Vector3DTest  Vector3DTest.cpp
Classes/Vertex/: Vertex.cpp  Vertex.h  Vertex.hpp  VertexTest  VertexTest.cpp  containerTest  containerTest.cpp
Functions/: FaceNormal.h  assignNeighbouringTriangles.hpp  assignNeighbouringTrianglesTesting  assignNeighbouringTrianglesTesting.cpp  createMultipleClusters.hpp  stringSplit.hpp
Templates/: ClassHeaderTemplate.cpp  ClassHeaderTemplate.h  FunctionTemplate.h  TestingTemplate.cpp
TestScripts/: FaceNormalTest  FaceNormalTest.cpp
